# Water-cal-analysis

./: .gitignore  README.md  code.ipynb  pyproject.toml
schema_examples/: spotcheck.json
src/: CaSCaDa.py  PyGUI.py  WebGUI.py  config.py  spot_check.py
src/extras/: watercal_correction.py
src/models/: spotcheck_model.py  watercal_dataset.py  watercal_model.py
src/services/: cache.py  dataset_loader.py  filesystem.py  filters.py
src/subpages/: launcher.py  manual_calibration.py  new_spotcheck.py  rig_dashboard.py  spotcheck_dashboard.py  watercal_dashboard.py
src/ui/: blocks.py  page_config.py  sidebar.py
src/ui_helpers/: record_block.py  sidebar.py
