[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "WATER-CAL-ANALYSIS"
version = "0.1.0"
description = "Analysis of the water calibration"
requires-python = ">=3.10"
readme = "README.md"

dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "seaborn",
    "scikit-learn",
    "pydantic"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
